# Sentiment-Analysis-CLI

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: export_cookies.py
src/: main.py
src/cli/: commands.py  dashboard.py  formatters.py
src/config/: cookie_manager.py  settings.py
src/crawler/: rate_limiter.py  topic_expander.py  x_scraper.py
src/engine/: indonesian_lexicon.py  preprocessor.py  sentiment_analyzer.py
src/output/: exporter.py
tests/: test_commands.py  test_config.py  test_dashboard.py  test_engine.py  test_exporter.py  test_formatters.py  test_integration.py  test_rate_limiter.py  test_sentiment_analyzer.py  test_x_scraper.py
