[project]
name = "sentiment-cli"
version = "0.1.0"
description = "CLI tool for sentiment analysis of X.com tweets"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40.0",
    "transformers>=4.57.0",
    "torch>=2.0.0",
    "rich>=13.0.0",
    "typer>=0.14.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"